src/objects/SBQQDS__DocuSignQuoteQuicklySettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BW_Countersign_User_Id__c</fullName>
        <label>BW Countersign User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrator_Key__c</fullName>
        <label>Integrator Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQDS__AccountID__c</fullName>
        <description>ID of DocuSign account</description>
        <inlineHelpText>ID of DocuSign account</inlineHelpText>
        <label>Account ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQDS__BatchSize__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Size of batches in which documents are processed.</description>
        <inlineHelpText>Size of batches in which documents are processed.</inlineHelpText>
        <label>Batch Size</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQDS__Endpoint__c</fullName>
        <defaultValue>&apos;https://www.docusign.net/v2&apos;</defaultValue>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoidedReason__c</fullName>
        <label>Voided Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign for Salesforce CPQ Settings</label>
</CustomObject>